fix overflow

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background-color: $veryLightGray;
-  // overflow: hidden;
+  overflow: hidden;
 
   .container {
     @include breakpoint-up(large) {
