--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -380,6 +380,7 @@ button:hover,
 
 .hero {
   background-color: #fafafa;
+  overflow: hidden;
 }
 
 @media (min-width: 64em) {
